--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.5",
     "nodemailer-express-handlebars": "^5.0.0",
-    "pg": "^8.4.0",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.4.0",
-    "typeorm": "0.3.6",
+    "typeorm": "^0.3.7",
     "uuid": "^8.3.2",
     "yup": "^0.32.11"
   },
