--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "git@github.com:thdias00/bravichallengeapi.git",
   "author": "Thiago <thiago.dias.148116@gmail.com>",
   "license": "MIT",
+  "engines": {
+    "node": "16.3.2"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -44,7 +47,7 @@
   },
   "scripts": {
     "dev": "ts-node-dev --files --rs src/server.ts",
-    "start": "ts-node src/index.ts",
+    "start": "node dist/server.js",
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:create": "typeorm-ts-node-commonjs migration:create",
     "migration:generate": "typeorm-ts-node-commonjs migration:generate -d ./src/data-source.ts",
