--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "scripts": {
     "dev": "ts-node-dev --files --rs src/server.ts",
     "start": "node dist/server.js",
+    "build": "tsc",
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:create": "typeorm-ts-node-commonjs migration:create",
     "migration:generate": "typeorm-ts-node-commonjs migration:generate -d ./src/data-source.ts",
